--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "framer-motion": "^1.11.1",
     "google-maps-react": "^2.0.2",
     "gulp-cli": "^2.2.0",
